# complex-recipes-net

./: .gitignore  README.md  api.py  makefile  pyproject.toml  recipes.py
inform/: Bibliography.bib  inform.sty  inform.tex
recipesnet/: Home.py  api.py  main.py  recipes.py  st_helpers.py
recipesnet/pages/: Ingredients.py  Similarity.py
